src/test/ui/did_you_mean/bad-assoc-ty.stderr
error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-ty.rs:11:10
   |
11 | type A = [u8; 4]::AssocTy;
   |          ^^^^^^^^^^^^^^^^ help: try: `<[u8; 4]>::AssocTy`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-ty.rs:15:10
   |
15 | type B = [u8]::AssocTy;
   |          ^^^^^^^^^^^^^ help: try: `<[u8]>::AssocTy`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-ty.rs:19:10
   |
19 | type C = (u8)::AssocTy;
   |          ^^^^^^^^^^^^^ help: try: `<(u8)>::AssocTy`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-ty.rs:23:10
   |
23 | type D = (u8, u8)::AssocTy;
   |          ^^^^^^^^^^^^^^^^^ help: try: `<(u8, u8)>::AssocTy`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-ty.rs:27:10
   |
27 | type E = _::AssocTy;
   |          ^^^^^^^^^^ help: try: `<_>::AssocTy`

error[E0223]: ambiguous associated type
  --> $DIR/bad-assoc-ty.rs:11:10
   |
11 | type A = [u8; 4]::AssocTy;
   |          ^^^^^^^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<[u8; <unevaluated[]>] as Trait>::AssocTy`

error[E0223]: ambiguous associated type
  --> $DIR/bad-assoc-ty.rs:15:10
   |
15 | type B = [u8]::AssocTy;
   |          ^^^^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<[u8] as Trait>::AssocTy`

error[E0223]: ambiguous associated type
  --> $DIR/bad-assoc-ty.rs:19:10
   |
19 | type C = (u8)::AssocTy;
   |          ^^^^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<u8 as Trait>::AssocTy`

error[E0223]: ambiguous associated type
  --> $DIR/bad-assoc-ty.rs:23:10
   |
23 | type D = (u8, u8)::AssocTy;
   |          ^^^^^^^^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<(u8, u8) as Trait>::AssocTy`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/bad-assoc-ty.rs:27:10
   |
27 | type E = _::AssocTy;
   |          ^ not allowed in type signatures

error: aborting due to 10 previous errors

